# pymuscle5

./: .gitignore  .gitmodules  CONTRIBUTING.md  MANIFEST.in  README.md  setup.cfg  setup.py
.github/workflows/: package.yml  requirements.txt  test.yml
include/muscle/: __init__.pxd  alpha.pxd  filebuffer.pxd  hmmparams.pxd  mpcflat.pxd  msa.pxd  multisequence.pxd  mysparsemx.pxd  myutils.pxd  pairhmm.pxd  pprog.pxd  sequence.pxd  tree.pxd  treeperm.pxd  upgma5.pxd
pymuscle/: __init__.py  _pymuscle.pyx  gitver.txt  omp.h
pymuscle/tests/: __init__.py  test_muscle.py
pymuscle/tests/data/: swissprot-halorhodopsin.faa
pymuscle5/: __init__.py  _muscle.pyx  _pymuscle.pyx
pymuscle5/tests/: test_muscle.py
pymuscle5/tests/data/: LuxC.faa  LuxC.muscle.afa
