[metadata]
name = pymuscle5
version = attr: pymuscle5._version.__version__
author = Martin Larralde
author_email = martin.larralde@embl.de
url = https://github.com/althonos/pymuscle5
description = Cython bindings and Python interface to MUSCLE v5, a software for making multiple alignments of biological sequences.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-only
platform = any
keywords = bioinformatics, genome, alignment, muscle, protein
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Cython
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Typing :: Typed
project_urls =
    # Documentation = https://pymuscle5.readthedocs.io/en/stable/
    Bug Tracker = https://github.com/althonos/pymuscle5/issues
    Changelog = https://github.com/althonos/pymuscle5/blob/master/CHANGELOG.md
    Coverage = https://codecov.io/gh/althonos/pymuscle5/
    Builds = https://github.com/althonos/pymuscle5/actions
    PyPI = https://pypi.org/project/pymuscle5

[options]
zip_safe = false
packages = pymuscle5, pymuscle5.tests
include_package_data = true
python_requires = >=3.5
setup_requires =
    setuptools >=46.4
    cython ~=0.29.16
tests_require =
    importlib-resources ; python_version < '3.7'

[options.entry_points]
console_scripts =
    pymuscle = pymuscle5.cli:main

[options.package_data]
pymuscle = py.typed, *.pyi
pymuscle.tests = data/*

[coverage:run]
plugins = Cython.Coverage

[coverage:report]
include = pymuscle5/*
omit = pymuscle5/tests/*
show_missing = true
exclude_lines =
    pragma: no cover
    if typing.TYPE_CHECKING:
    @abc.abstractmethod
    @abc.abstractproperty
    raise NotImplementedError
    return NotImplemented
    raise MemoryError()

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
exclude = pymuscle5/tests/*
